Fixed chart aligning when scaled down

--- a/client/ui/components/charts/charts.css
+++ b/client/ui/components/charts/charts.css
@@ -12,6 +12,7 @@
   width  : 100%;
   height : 100%;
   transition: transform 0.5s;
+  text-align: center;
 }
 
 .chart-flex {
